force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>To maintain the high-level detail for each Asset type exist under my organization.</description>
    <label>Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>