force-app/main/default/objects/Asset__c/fields/Asset_Group__c.field-meta.xml
<CustomField>
    <fullName>Asset_Group__c</fullName>
    <label>Asset Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>