force-app/main/default/objects/Asset__c/fields/Assigned_Assets__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Assets__c</fullName>
    <description>Roll Summary of Deployed Assets</description>
    <label>Assigned Assets</label>
    <summaryFilterItems>
        <field>Hardware_Detail__c.Status__c</field>
        <operation>equals</operation>
        <value>Deployed</value>
    </summaryFilterItems>
    <summaryForeignKey>Hardware_Detail__c.Asset_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>