force-app/main/default/objects/Asset__c/fields/Assigned_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Licenses__c</fullName>
    <label>Assigned Licenses</label>
    <summaryFilterItems>
        <field>Software_Assignment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>inactive</value>
    </summaryFilterItems>
    <summaryForeignKey>Software_Assignment__c.Software_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>