force-app/main/default/objects/Asset__c/fields/Assigned_Resources__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resources__c</fullName>
    <label>Assigned Resources</label>
    <summaryFilterItems>
        <field>Professional_Services_Assignment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Inactive</value>
    </summaryFilterItems>
    <summaryForeignKey>Professional_Services_Assignment__c.Professional_Service_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>