force-app/main/default/objects/Asset__c/fields/Available_Assets__c.field-meta.xml
<CustomField>
    <fullName>Available_Assets__c</fullName>
    <formula>IF((Total_Assets__c -  Assigned_Assets__c) &gt;=0 , (Total_Assets__c -  Assigned_Assets__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>