force-app/main/default/objects/Asset__c/fields/Available_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Available_Licenses__c</fullName>
    <formula>if ((Total_Licenses__c  -  Assigned_Licenses__c) &gt;=0 ,(Total_Licenses__c  -  Assigned_Licenses__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>