force-app/main/default/objects/Asset__c/fields/Available_Licenses_Percent__c.field-meta.xml
<CustomField>
    <fullName>Available_Licenses_Percent__c</fullName>
    <formula>Available_Licenses__c / Total_Licenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Licenses Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>