force-app/main/default/objects/Asset__c/fields/Available_Resources__c.field-meta.xml
<CustomField>
    <fullName>Available_Resources__c</fullName>
    <formula>IF((Total_Resources__c -  Assigned_Resources__c)&gt;=0, (Total_Resources__c -  Assigned_Resources__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Resources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>