force-app/main/default/objects/Asset__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>Total Assets</label>
    <summarizedField>Contract_Line_Item__c.Total_Assets__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Asset_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>