force-app/main/default/objects/Asset__c/fields/Total_Hardware_Cost_to_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_Cost_to_Company_c__c</fullName>
    <label>Total Hardware Cost to Company</label>
    <summarizedField>Contract_Line_Item__c.Total_Hardware_Cost__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Asset_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>