force-app/main/default/objects/Asset__c/fields/Total_HR_Cost_to_Company__c.field-meta.xml
<CustomField>
    <fullName>Total_HR_Cost_to_Company__c</fullName>
    <label>Total PS Cost to Company</label>
    <summarizedField>Contract_Line_Item__c.Total_PS_Cost__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Asset_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>