force-app/main/default/objects/Asset__c/fields/Total_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Licenses__c</fullName>
    <label>Total Licenses</label>
    <summarizedField>Contract_Line_Item__c.Total_Licenses__c</summarizedField>
    <summaryForeignKey>Contract_Line_Item__c.Asset_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>