force-app/main/default/objects/Asset__c/recordTypes/Hardware.recordType-meta.xml
<RecordType>
    <fullName>Hardware</fullName>
    <active>true</active>
    <label>Hardware</label>
</RecordType>