force-app/main/default/objects/Asset__c/recordTypes/Software.recordType-meta.xml
<RecordType>
    <fullName>Software</fullName>
    <active>true</active>
    <label>Software</label>
</RecordType>