force-app/main/default/objects/Asset__c/validationRules/Assigned_Assets_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_Assets_Validation_Rule</fullName>
    <active>true</active>
    <description>Assigned Assets can not be greater than Total Assets.</description>
    <errorConditionFormula>Assigned_Assets__c &gt;  Total_Assets__c</errorConditionFormula>
    <errorDisplayField>Asset_Group__c</errorDisplayField>
    <errorMessage>Assigned Assets can not be greater than Total Assets.</errorMessage>
</ValidationRule>