force-app/main/default/objects/Asset__c/validationRules/Assigned_Licences_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigned_Licences_Validation_Rule</fullName>
    <active>true</active>
    <description>Assigned Licenses can not be greater than Total Licences.</description>
    <errorConditionFormula>Assigned_Licenses__c &gt; Total_Licenses__c</errorConditionFormula>
    <errorMessage>Assigned Licenses can not be greater than Total Licences.</errorMessage>
</ValidationRule>