force-app/main/default/objects/Asset__c/validationRules/Non_Negative_Assets_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Assets_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Available_Assets__c &lt; 0, Assigned_Assets__c &lt; 0, Total_Assets__c &lt; 0)</errorConditionFormula>
    <errorMessage>Available Assets/Assigned Assets/Total Assets can not be Negative.</errorMessage>
</ValidationRule>