force-app/main/default/objects/Asset__c/validationRules/Total_Licenses_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Licenses_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Licenses__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Asset_Group__c</errorDisplayField>
    <errorMessage>Total number of Licenses can not be negative</errorMessage>
</ValidationRule>