force-app/main/default/objects/Asset__c/listViews/Available_Software_License.listView-meta.xml
<ListView>
    <fullName>Available_Software_License</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_Licenses__c</field>
        <operation>lessThan</operation>
        <value>10</value>
    </filters>
    <label>Available Software License</label>
</ListView>