force-app/main/default/objects/Asset__c/listViews/Hardware_Accessories.listView-meta.xml
<ListView>
    <fullName>Hardware_Accessories</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Group__c</field>
        <operation>equals</operation>
        <value>Accessories</value>
    </filters>
    <label>Hardware Accessories</label>
</ListView>