force-app/main/default/objects/Asset__c/listViews/Hardware_Asset_Monitor.listView-meta.xml
<ListView>
    <fullName>Hardware_Asset_Monitor</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Group__c</field>
        <operation>equals</operation>
        <value>Monitor</value>
    </filters>
    <label>Hardware Asset - Monitor</label>
</ListView>