force-app/main/default/objects/Asset__c/listViews/List_of_Human_Resources.listView-meta.xml
<ListView>
    <fullName>List_of_Human_Resources</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.Professional_Services</value>
    </filters>
    <label>List of Human Resources</label>
</ListView>