force-app/main/default/objects/Asset__c/listViews/List_of_Software_Assets.listView-meta.xml
<ListView>
    <fullName>List_of_Software_Assets</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset__c.Software</value>
    </filters>
    <label>List of Software Assets</label>
</ListView>