force-app/main/default/objects/Asset__c/listViews/Software_Licenses_less_than_10.listView-meta.xml
<ListView>
    <fullName>Software_Licenses_less_than_10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_Licenses_Percent__c</field>
        <operation>lessThan</operation>
        <value>10.0</value>
    </filters>
    <label>Software Licenses less than 10%</label>
</ListView>